--- a/.gitignore
+++ b/.gitignore
@@ -43,9 +43,6 @@ coverage
 # node-waf configuration
 .lock-wscript
 
-# Compiled binary addons (http://nodejs.org/api/addons.html)
-build/Release
-
 # Dependency directories
 node_modules
 jspm_packages
@@ -65,3 +62,5 @@ bower_components
 
 ###Task related folders
 jsapiupload
+dist
+build
