--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "scripts": {
     "build:dev": "webpack --config webpack.config.dev.js",
-    "start:dev": "webpack-dev-server --config webpack.config.dev.js"
+    "start:web": "webpack-dev-server --config webpack.config.dev.js"
   },
   "keywords": [],
   "author": "",
@@ -26,9 +26,16 @@
     "webpack-dev-server": "^3.1.4"
   },
   "dependencies": {
+    "moment": "^2.22.2",
+    "prop-types": "^15.6.2",
     "react": "^16.4.1",
+    "react-day-picker": "^7.1.10",
     "react-dom": "^16.4.1",
+    "react-jss": "^8.6.1",
+    "react-modal": "^3.5.1",
     "react-redux": "^5.0.7",
-    "redux": "^4.0.0"
+    "react-select": "^2.0.0-beta.7",
+    "redux": "^4.0.0",
+    "redux-form": "^7.4.2"
   }
 }
