--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "moment": "^2.22.2",
     "prop-types": "^15.6.2",
     "react": "^16.4.1",
+    "react-custom-scrollbars": "^4.2.1",
     "react-day-picker": "^7.1.10",
     "react-dom": "^16.4.1",
     "react-jss": "^8.6.1",
