--- a/package.json
+++ b/package.json
@@ -26,6 +26,8 @@
     "webpack-dev-server": "^3.1.4"
   },
   "dependencies": {
+    "connected-react-router": "^4.3.0",
+    "history": "^4.7.2",
     "moment": "^2.22.2",
     "prop-types": "^15.6.2",
     "react": "^16.4.1",
@@ -35,6 +37,8 @@
     "react-jss": "^8.6.1",
     "react-modal": "^3.5.1",
     "react-redux": "^5.0.7",
+    "react-router": "^4.3.1",
+    "react-router-dom": "^4.3.1",
     "react-select": "^2.0.0-beta.7",
     "redux": "^4.0.0",
     "redux-form": "^7.4.2"
